--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,22 @@
 <resources>
     <string name="app_name">About me</string>
     <string name="name">Thu Trinh</string>
+    <string name="yellow_star">Yellow star</string>
+
+    <string name="bio">Hi, my name Thu.
+    \n\nI got 3 month experience as an internship at A company.
+    \n\nI like reading books and cooking.
+    \nI’m a careful and hard-working person.
+    \nI’m eager to learn new things and willing to work in team.
+        \n\nI got 3 month experience as an internship at A company.
+    \n\nI like reading books and cooking.
+    \nI’m a careful and hard-working person.
+    \nI’m eager to learn new things and willing to work in team.
+        \n\nI got 3 month experience as an internship at A company.
+    \n\nI like reading books and cooking.
+    \nI’m a careful and hard-working person.
+    \nI’m eager to learn new things and willing to work in team.
+    \nI easily adapt to with new working environment and take initiative in work.\n\n</string>
+    <string name="What_is_your_nickname">What is your Nickname</string>
+    <string name="done">Done</string>
 </resources>
